@@ -1,3 +1,6 @@
+2003-09-30    Ping Cheng <pingc@wacom.com>
+	* Fixed TwinView relative mapping error
+
 2003-09-24    Ping Cheng <pingc@wacom.com>
 	* Support TwinView with different Screen resolutions
 	* Added a new option, "TVResolution", to configure each resolution
